200225_집에서 미팅자료 준비

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\wonju\\Anaconda3\\envs\\QM_WJ\\python.exe"
+    "python.pythonPath": "C:\\Users\\wonju\\Anaconda3\\envs\\envs_WJ\\python.exe"
 }
