--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\wonju\\Anaconda3\\envs\\QM_WJ\\python.exe"
+    "python.pythonPath": "C:\\Users\\wonju\\Anaconda3\\envs\\QM_WJ_ML1_ML1\\python.exe"
 }
